--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="header__wrapper">
-            <div class="header__logo"></div>
+            <a href="index.html"><div class="header__logo"></div></a>
         </div>
     </div>
 
@@ -22,8 +22,8 @@
         <div class="menu__open">
             <div class="menu__btnMenuClose"></div>
             <ul>
-                <li><a href="javascript:void(0)">ABOUT</a></li>
-                <li><a href="javascript:void(0)">SERVICE</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="department.html">SERVICE</a></li>
                 <li><a href="javascript:void(0)">CLIENTS</a></li>
                 <li><a href="javascript:void(0)">CONTACT</a></li>
             </ul>
