--- a/department.html
+++ b/department.html
@@ -1,41 +1,48 @@
 <html>
+
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 	<title>TAG Shanghai</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery-2.1.4.min.js"></script>
 </head>
+
 <body>
 	<div class="header">
-        <div class="header__wrapper">
-            <div class="header__logo"></div>
-        </div>                       
-    </div>
-	
+		<div class="header__wrapper">
+			<a href="index.html">
+				<div class="header__logo"></div>
+			</a>
+		</div>
+	</div>
+
 	<div class="menu">
-        <div class="menu__btnMenuOpen"></div>
-        <div class="menu__open">            
-            <div class="menu__btnMenuClose"></div>
-            <ul>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="service.html">SERVICE</a></li>               
-                <li><a href="client.html">CLIENTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>        
-        </div>                       
-    </div>
+		<div class="menu__btnMenuOpen"></div>
+		<div class="menu__open">
+			<div class="menu__btnMenuClose"></div>
+			<ul>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="department.html">SERVICE</a></li>
+				<li><a href="javascript:void(0)">CLIENTS</a></li>
+				<li><a href="javascript:void(0)">CONTACT</a></li>
+			</ul>
+		</div>
+	</div>
 
 
 
 
 	<div id="department">
-		<section class="section-1">
-			<p>Digital</p>
-			<div class="bord"></div>
-			<div class="arrow"></div>
-			<div class="btm-txt">(playing video)</div>
-		</section>
+		<a href="digital.html">
+			<section class="section-1">
+				<p>Digital</p>
+				<div class="bord"></div>
+				<div class="arrow"></div>
+				<div class="btm-txt">(playing video)</div>
+			</section>
+		</a>
 		<section class="section-2">
 			<p>Studio</p>
 			<div class="bord"></div>
@@ -55,22 +62,23 @@
 			<div class="btm-txt">(playing video)</div>
 		</section>
 	</div>
-	
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/plugins/CSSPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/easing/EasePack.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
-    <script src="js/common.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/easing/EasePack.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
+	<script src="js/common.js"></script>
 </body>
+
 </html>
 <script>
 	var departHoverId = $('#department section')
 	$(function(){
 		departHoverId.each(function(index,item){
-			$(this).mouseleave(function(){
+			$(this).bind('click mouseover',function(){
 				departHoverId.removeClass('hover');
-			}).mouseover(function(){
 				$(this).addClass('hover');
 			})
 		})
 	})
+
 </script>
