--- a/digital.html
+++ b/digital.html
@@ -44,7 +44,7 @@
     </div> 
 	<div class="header header_transparent">
         <div class="header__wrapper header__wrapper_borderBottom">
-            <div class="header__logo"></div>
+            <a href="index.html"><div class="header__logo"></div></a>
         </div>                       
     </div>
     <div class="menu">
@@ -53,9 +53,9 @@
             <div class="menu__btnMenuClose"></div>
             <ul>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="service.html">SERVICE</a></li>               
-                <li><a href="client.html">CLIENTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="department.html">SERVICE</a></li>
+                <li><a href="javascript:void(0)">CLIENTS</a></li>
+                <li><a href="javascript:void(0)">CONTACT</a></li>
             </ul>        
         </div>                       
     </div>
