--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
     <title>TAG Shanghai</title>
     <link type="text/css" rel="stylesheet" href="css/common.css"/>
     <link type="text/css" rel="stylesheet" href="css/home.css"/>
@@ -12,7 +13,7 @@
 <body>
     <div class="header">
         <div class="header__wrapper">
-            <div class="header__logo"></div>
+            <a href="index.html"><div class="header__logo"></div></a>
         </div>                       
     </div>
 
@@ -21,8 +22,8 @@
         <div class="menu__open">            
             <div class="menu__btnMenuClose"></div>
             <ul>
-                <li><a href="javascript:void(0)">ABOUT</a></li>
-                <li><a href="javascript:void(0)">SERVICE</a></li>               
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="department.html">SERVICE</a></li>
                 <li><a href="javascript:void(0)">CLIENTS</a></li>
                 <li><a href="javascript:void(0)">CONTACT</a></li>
             </ul>        
