--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-    <title>TAG Shanghai About</title>    
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <title>TAG Shanghai About</title>
     <link type="text/css" rel="stylesheet" href="css/common.css" />
     <link type="text/css" rel="stylesheet" href="css/about.css" />
 
@@ -13,21 +13,22 @@
 <body>
     <div class="header">
         <div class="header__wrapper">
-            <a href="index.html"><div class="header__logo"></div></a>
+            <a href="index.html">
+                <div class="header__logo"></div>
+            </a>
         </div>
     </div>
-
+    
     <div class="menu">
-        <div class="menu__btnMenuOpen"></div>
-        <div class="menu__open">
-            <div class="menu__btnMenuClose"></div>
-            <ul>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="department.html">SERVICE</a></li>
-                <li><a href="javascript:void(0)">CLIENTS</a></li>
-                <li><a href="javascript:void(0)">CONTACT</a></li>
-            </ul>
-        </div>
+        <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="department.html">SERVICE</a></li>
+            <li><a href="javascript:void(0)">CLIENTS</a></li>
+            <li><a href="javascript:void(0)">CONTACT</a></li>
+        </ul>
+        <div class="menu__btnMenu"></div>
+    </div>
+
     </div>
 
     <div class="about">
@@ -42,7 +43,7 @@
                         <div class="about__card__content__headline">
                             We’ve an impressive<br>body of work.
                         </div>
-                        <div class="about__card__content__btnReadMore" >
+                        <div class="about__card__content__btnReadMore">
                             Read more
                         </div>
                     </div>
