--- a/department.html
+++ b/department.html
@@ -11,25 +11,22 @@
 
 <body>
 	<div class="header">
-		<div class="header__wrapper">
-			<a href="index.html">
-				<div class="header__logo"></div>
-			</a>
-		</div>
-	</div>
-
-	<div class="menu">
-		<div class="menu__btnMenuOpen"></div>
-		<div class="menu__open">
-			<div class="menu__btnMenuClose"></div>
-			<ul>
-				<li><a href="about.html">ABOUT</a></li>
-				<li><a href="department.html">SERVICE</a></li>
-				<li><a href="javascript:void(0)">CLIENTS</a></li>
-				<li><a href="javascript:void(0)">CONTACT</a></li>
-			</ul>
-		</div>
-	</div>
+        <div class="header__wrapper">
+            <a href="index.html">
+                <div class="header__logo"></div>
+            </a>
+        </div>
+    </div>
+    
+    <div class="menu">
+        <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="department.html">SERVICE</a></li>
+            <li><a href="javascript:void(0)">CLIENTS</a></li>
+            <li><a href="javascript:void(0)">CONTACT</a></li>
+        </ul>
+        <div class="menu__btnMenu"></div>
+    </div>
 
 
 
