--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
     </div>
 
     <div class="menu">
-        <div class="menu__btnMenuOpen"></div>
-        <div class="menu__open">            
-            <div class="menu__btnMenuClose"></div>
-            <ul>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="department.html">SERVICE</a></li>
-                <li><a href="javascript:void(0)">CLIENTS</a></li>
-                <li><a href="javascript:void(0)">CONTACT</a></li>
-            </ul>        
-        </div>                       
+        <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="department.html">SERVICE</a></li>
+            <li><a href="javascript:void(0)">CLIENTS</a></li>
+            <li><a href="javascript:void(0)">CONTACT</a></li>
+        </ul>
+        <div class="menu__btnMenu"></div>
     </div>
 
 
