--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </a>
         </div>
     </div>
-    
+
     <div class="menu">
         <ul>
             <li><a href="about.html">ABOUT</a></li>
@@ -26,7 +26,13 @@
             <li><a href="javascript:void(0)">CLIENTS</a></li>
             <li><a href="javascript:void(0)">CONTACT</a></li>
         </ul>
-        <div class="menu__btnMenu"></div>
+        <div class="menu__btnMenu">
+            <div class="menu__btnMenu__lines">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </div>
 
     </div>
