--- a/digital.html
+++ b/digital.html
@@ -41,14 +41,14 @@
 		</div>
 
 	</div>
-	<div class="header header_transparent">
-		<div class="header__wrapper header__wrapper_borderBottom">
+	<div class="header">
+		<div class="header__wrapper">
 			<a href="index.html">
 				<div class="header__logo"></div>
 			</a>
 		</div>
 	</div>
-	<div class="menu menu__transparnet">
+	<div class="menu">
 		<ul>
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="department.html">SERVICE</a></li>
