--- a/about.html
+++ b/about.html
@@ -59,10 +59,11 @@
                     <div class="about__card__title">Overview</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg02.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            Passionate about making<br>your marketing more<br>efficient.
+                            <br>
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
@@ -74,10 +75,10 @@
                     <div class="about__card__title">Our technology</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg03.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            The technology behind<br> efficient brands.
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
@@ -89,10 +90,10 @@
                     <div class="about__card__title">Our People</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg04.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            Bonjour, hola, مرحبا, привет,<br>hallo, hello.
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
@@ -104,10 +105,10 @@
                     <div class="about__card__title">Our Executive team</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg05.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            Creating the perfect partner<br>for your brand.
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
@@ -119,10 +120,10 @@
                     <div class="about__card__title">Our global network</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg06.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            We’re everywhere<br>you need us.
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
@@ -134,10 +135,10 @@
                     <div class="about__card__title">Our Responsibility</div>
                     <div class="about__card__content">
                         <div class="about__card__content__img">
-                            <img src="images/about/cardImg01.jpg" alt="" />
+                            <img src="images/about/cardImg07.jpg" alt="" />
                         </div>
                         <div class="about__card__content__headline">
-                            We’ve an impressive<br>body of work.
+                            We’re part of your<br>community.
                         </div>
                         <div class="about__card__content__btnReadMore">
                             Read more
