--- a/index.html
+++ b/index.html
@@ -37,7 +37,23 @@
     <div class="home">
         <div class="home__headline">We Realising Brand Potential</div>
         <div class="home__copy">Tag is a global brand services company that delivers value by working with clients and their strategic partners<br>to implement marketing communications, creatively and efficiently.</div>
-        <div class="home__bg"></div>
+        <div class="home__bg">
+            <div class="star_1 star flash animated3s infinite"></div>
+            <div class="star_2 star flash animateddelay1s infinite"></div>
+            <div class="star_3 star flash animateddelay2s infinite"></div>
+            <div class="star_4 star flash animated3s infinite"></div>
+            <div class="star_5 star flash animateddelay1s infinite"></div>
+            <div class="star_6 star flash animateddelay2s infinite"></div>
+            <div class="star_7 star flash animated3s infinite"></div>
+            <div class="star_8 star flash animateddelay1s infinite"></div>
+            <div class="star_9 star flash animateddelay2s infinite"></div>
+            <div class="star_10 star flash animated3s infinite"></div>
+            <div class="star_11 star flash animateddelay1s infinite"></div>
+            <div class="star_12 star flash animateddelay2s infinite"></div>
+            <div class="planet_1" id="planet_1"></div>
+            <div class="planet_2" id="planet_2"></div>
+            <div class="planet_3" id="planet_3"></div>
+        </div>
         <div class="home__map" id="home-map">
             <div class="home__map__wrapper" id="move-1">
                 <!-- sh -->
@@ -47,7 +63,7 @@
                         <p class="title">Shanghai</p>
                         <p class="main">Unit 201-202 Building D, <br>Red Town 570 <br>Huai Hai Xi Road <br>Shanghai P.R. China,</p>
                     </div>
-                    <div class="pop-btn"></div>
+                    <div class="pop-btn"><a href="department.html"></a></div>
                 </div>
 
                 <!-- Singapore -->
