--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="department.html">SERVICE</a></li>
             <li><a href="javascript:void(0)">CLIENTS</a></li>
-            <li><a href="javascript:void(0)">CONTACT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <div class="menu__btnMenu">
             <div class="menu__btnMenu__lines">
