--- a/studio.html
+++ b/studio.html
@@ -41,9 +41,9 @@
             <p>Type your description here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
             <hr/>
-            <a class="studio__intro__ourworks">Our works</a>
+            <a href="#ourworks" class="studio__intro__ourworks">Our works</a>
         </div>
-        <div class="studio__ourworks">
+        <div id="ourworks" class="studio__ourworks">
             <div class="studio__left">
                 <div class="studio__btnLeft"></div>
                 <h2>OUR<br>WORKS</h2>
