--- a/studio.html
+++ b/studio.html
@@ -43,7 +43,7 @@
             <hr/>
             <a href="#ourworks" class="studio__intro__ourworks">Our works</a>
         </div>
-        <div id="ourworks" class="studio__ourworks">
+        <div class="studio__ourworks">
             <div class="studio__left">
                 <div class="studio__btnLeft"></div>
                 <h2>OUR<br>WORKS</h2>
