--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body id="works">
     <div class="header">
         <div class="header__wrapper">
             <a href="index.html">
@@ -51,7 +51,7 @@
                     eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
                 <hr/>
             </div>
-            <div class="studio__right">
+            <div  class="studio__right">
                 <div class="studio__cards">
                     <div class="studio__card" style="background-image: url(./images/service/studio/work1_small.jpg);">
                         <div class="studio__card_over">
