--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body id="works">
+<body>
     <div class="header">
         <div class="header__wrapper">
             <a href="index.html">
