--- a/studio.html
+++ b/studio.html
@@ -40,18 +40,20 @@
             <h2>Studio</h2>
             <p>Type your description here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
-            <hr/>
+            <hr align="left"/><!--for ie-->
             <a href="#works" class="studio__intro__ourworks">Our works</a>
         </div>
         <div class="studio__ourworks">
             <div class="studio__left">
-                <a href=""><div class="studio__btnLeft"></div></a>
+                <a href="">
+                    <div class="studio__btnLeft"></div>
+                </a>
                 <h2>OUR<br>WORKS</h2>
                 <p>Type your description here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
                     eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
-                <hr/>
+                <hr align="left"/>
             </div>
-            <div  class="studio__right">
+            <div class="studio__right">
                 <div class="studio__cards">
                     <div class="studio__card" style="background-image: url(./images/service/studio/work1_small.jpg);">
                         <div class="studio__card_over">
