--- a/broadcast.html
+++ b/broadcast.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <title>TAG Shanghai Studio</title>
+    <title>TAG Shanghai Broadcast</title>
     <link type="text/css" rel="stylesheet" href="css/common.css" />
     <link type="text/css" rel="stylesheet" href="css/studio.css" />
 
@@ -37,28 +37,28 @@
 
     <div class="studio">
         <div class="studio__left">
-            <h2>Studio</h2>
-            <p>Adaptation: Taking existing or final designs, and develop complete layouts for specifics sizes and languages
-                for the local market, while ensuring brand consistency. Final Artwork: Creating print ready files in high-resolution
-                for mass production. Creative Artwork: Producing outstanding design behind an idea and solving design problems.
-                Touching across multiple touching points, including outdoor, POS, in store, vehicle and press. Retouching:
-                Product and model retouching for commercials, guaranteeing the entire product or model range is consistent.
-            </p>
+            <h2>Broadcast</h2>
+            <p>Quality Control: Ingest of video material with full check on quality, frame-rates and adaptability potential.
+                Visual FX: Clean-up, beauty work, pack replacements and 2D motion graphics using After Effects and Autodesk
+                Smoke. Editing: Cut-down, re-edit and audio mixing capability. TVC Adaptation: Adapting the titles and graphics
+                of Global Masters for local market versioning. Broadcast Fulfilment: Mastering & Encoding final TVC’s to
+                file or tape and delivering to Broadcast.</p>
             <hr align="left" />
-            <!--for ie-->
             <a href="#works" class="studio__intro__ourworks">Our works</a>
         </div>
         <div class="studio__ourworks">
             <div class="studio__left">
                 <a href="">
-                    <!--fro ie-->
                     <div class="studio__btnLeft"></div>
                 </a>
                 <h2>OUR<br>WORKS</h2>
-                <p>Type your description here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
+                <p>WLT receives ‘clean’ and ‘English-titled’ global video assets from the creative agency. WLT Transcreation
+                    team translates the English Copy into suitable Korean copy. WLT Artwork Team creates .ai Illustrator
+                    files of the Korean text for use in the edit suite. Using the ‘English-titled’ version as a reference,
+                    the Editor applies the Korean text to the ‘clean’ video asset, recreating all animation and effects true
+                    to the approved English-titled master.
+                </p>
                 <hr align="left" />
-                <!--for ie-->
             </div>
             <div class="studio__right">
                 <div class="studio__cards">
