--- a/transcreation.html
+++ b/transcreation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <title>TAG Shanghai Studio</title>
+    <title>TAG Shanghai Transcreation</title>
     <link type="text/css" rel="stylesheet" href="css/common.css" />
     <link type="text/css" rel="stylesheet" href="css/studio.css" />
 
@@ -37,28 +37,24 @@
 
     <div class="studio">
         <div class="studio__left">
-            <h2>Studio</h2>
-            <p>Adaptation: Taking existing or final designs, and develop complete layouts for specifics sizes and languages
-                for the local market, while ensuring brand consistency. Final Artwork: Creating print ready files in high-resolution
-                for mass production. Creative Artwork: Producing outstanding design behind an idea and solving design problems.
-                Touching across multiple touching points, including outdoor, POS, in store, vehicle and press. Retouching:
-                Product and model retouching for commercials, guaranteeing the entire product or model range is consistent.
-            </p>
+            <h2>Transcreation</h2>
+            <p>Our Language Team goes beyond translation and localization for short or long copies, and is also dedicated to
+                providing professional transcreation services tailored to suit your particular business needs in specific
+                market domains. We aim to deliver brand coherent yet locally impactful copy from print to digital by adapting
+                your brand message while retaining consistent style and tone of voice across deliverables in accordance to
+                the agreed brand guidelines. </p>
             <hr align="left" />
-            <!--for ie-->
             <a href="#works" class="studio__intro__ourworks">Our works</a>
         </div>
         <div class="studio__ourworks">
             <div class="studio__left">
                 <a href="">
-                    <!--fro ie-->
                     <div class="studio__btnLeft"></div>
                 </a>
                 <h2>OUR<br>WORKS</h2>
-                <p>Type your description here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. </p>
+                <p>TWe provide language adaption for prints, TVC, KV and digital assets from long copy translation to copy transcreation
+                    and origination as well as culture consultation for Intel. </p>
                 <hr align="left" />
-                <!--for ie-->
             </div>
             <div class="studio__right">
                 <div class="studio__cards">
