--- a/broadcast.html
+++ b/broadcast.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="studio">
+    <div class="studio" style="background-image:url('images/service/broadcast/bg.jpg');">
         <div class="studio__left">
             <h2>Broadcast</h2>
             <p>Quality Control: Ingest of video material with full check on quality, frame-rates and adaptability potential.
