--- a/digital.html
+++ b/digital.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="studio">
+    <div class="studio" style="background-image:url('images/service/digital/bg.jpg');">
         <div class="studio__left">
             <h2>Digital</h2>
             <p>TDI produces innovative and highly creative online solution’s. We are committed and passionate, specializing
