--- a/studio.html
+++ b/studio.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="studio">
+    <div class="studio" style="background-image:url('images/service/studio/bg.jpg');">
         <div class="studio__left">
             <h2>Studio</h2>
             <p>Adaptation: Taking existing or final designs, and develop complete layouts for specifics sizes and languages
