--- a/transcreation.html
+++ b/transcreation.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="studio">
+    <div class="studio" style="background-image:url('images/service/transcreation/bg.jpg');">
         <div class="studio__left">
             <h2>Transcreation</h2>
             <p>Our Language Team goes beyond translation and localization for short or long copies, and is also dedicated to
