--- a/service.html
+++ b/service.html
@@ -37,37 +37,31 @@
 
 
 	<div id="department">
-		<a href="digital.html">
-			<section class="section-1">
-				<!-- <p>Digital</p>
-				<div class="bord"></div>
-				<div class="arrow"></div>
-				<div class="btm-txt">(playing video)</div> -->
-			</section>
-		</a>
-		<section class="section-2">
-			<!-- <p>Studio</p>
-			<div class="bord"></div>
-			<div class="arrow"></div>
-			<div class="btm-txt">(playing video)</div> -->
+		<section class="section-1" id="section-0">
+			<div class="c-txt-1 c-txt"></div>
+			<img src="images/service/main/or_1_hover.jpg" class="bgHover" alt="">
+			<img src="images/service/main/or_1.jpg" alt="">
 		</section>
-		<section class="section-3">
-			<!-- <p>Broadcast</p>
-			<div class="bord"></div>
-			<div class="arrow"></div>
-			<div class="btm-txt">(playing video)</div> -->
+		<section class="section-2" id="section-1">
+			<div class="c-txt-2 c-txt"></div>
+			<img src="images/service/main/or_2_hover.jpg" class="bgHover" alt="">
+			<img src="images/service/main/or_2.jpg" alt="">
 		</section>
-		<section class="section-4">
-			<!-- <p>Transcreation</p>
-			<div class="bord"></div>
-			<div class="arrow"></div>
-			<div class="btm-txt">(playing video)</div> -->
+		<section class="section-3" id="section-2">
+			<div class="c-txt-3 c-txt"></div>
+			<img src="images/service/main/or_3_hover.jpg" class="bgHover" alt="">
+			<img src="images/service/main/or_3.jpg" alt="">
+		</section>
+		<section class="section-4" id="section-3">
+			<div class="c-txt-4 c-txt"></div>
+			<img src="images/service/main/or_4_hover.jpg" class="bgHover" alt="">
+			<img src="images/service/main/or_4.jpg" alt="">
 		</section>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/plugins/CSSPlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/easing/EasePack.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/service.js"></script>
