--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,13 @@
         <div class="location">
             <img src="images/contact/icon-location.png" alt="" id='icon-location' />
             <p class="txt">Shanghai Office <br>Unit 201-202 Building D, Red Town 570, Huai Hai Xi Road <br>Shanghai P.R. China, 200052</p>
+            <br class="clearfix" />
         </div>
 
         <div class="phone">
             <img src="images/contact/icon-phone.png" alt="" id='icon-phone' />
             <p class="txt">T +86 (21) 5254 0158 <br>F +86 (21) 5254 0168</p>
+            <br class="clearfix" />
         </div>
 
         <div class="mail">
