--- a/upload/index.html
+++ b/upload/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>upload image</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="initial-scale=1,width=device-width,user-scalable=no"/>
 </head>
 
 <body>
