--- a/camera/index.html
+++ b/camera/index.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Navigator.getUserMedia()</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-    </head>
 
-    <body>
-        <video width="320" height="240"></video>
-        <br>
-        <canvas width="320" height="240"></canvas>
-        <p class="info-camera"></p>
-        <div class="btn-takephoto">拍照</div>
+<head>
+    <meta charset="utf-8" />
+    <title>Navigator.getUserMedia()</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="initial-scale=1,width=device-width,user-scalable=no" />
+</head>
 
-        <script src="main.js" type="text/javascript"></script>        
-    </body>
+<body>
+    <video width="320" height="240"></video>
+    <br>
+    <canvas width="320" height="240"></canvas>
+    <p class="info-camera"></p>
+    <div class="btn-takephoto">拍照</div>
+
+    <script src="main.js" type="text/javascript"></script>
+</body>
+
 </html>
