--- a/upload/index.html
+++ b/upload/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
-    <canvas width="320" height="240"></canvas>
+    <!--<canvas width="320" height="240"></canvas>-->
+    <img src="" alt=""/>
     <br>
     <div class="input-wrapper">        
         <div class="input-visual">上传图片</div>
-        <input type="file" accept=".jpg,.jpeg,.png,.gif"/>
+        <input type="file"/>
     </div>
     <script src="main.js" type="text/javascript"></script>
 </body>
