--- a/upload/index.html
+++ b/upload/index.html
@@ -5,17 +5,18 @@
     <meta charset="utf-8" />
     <title>upload image</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <meta name="viewport" content="initial-scale=1,width=device-width,user-scalable=no"/>
+    <meta name="viewport" content="initial-scale=1,width=device-width,user-scalable=no" />
 </head>
 
 <body>
     <!--<canvas width="320" height="240"></canvas>-->
     <img src="" alt=""/>
     <br>
-    <div class="input-wrapper">        
+    <div class="input-wrapper">
         <div class="input-visual">上传图片</div>
-        <input type="file"/>
+        <input type="file" />
     </div>
+    <p class="info-upload"></p>
     <script src="main.js" type="text/javascript"></script>
 </body>
 
